# interpreter

./: interpreter.cabal
app/: Ast.hs  Lexer.hs  Main.hs  Parser.hs  Token.hs
lib/: Ast.hs  Evaluator.hs  Lexer.hs  Parser.hs  Token.hs
tests/: Main.hs
