cabal-version:      2.4
name:               interpreter
version:            0.1.0.0
author:             FaydSpeare
maintainer:         faydspeare@gmail.com

library
    exposed-modules: 
        Lexer
        Token
        Ast
        Parser
        Evaluator
    build-depends: base >=4.16.4.0
    hs-source-dirs: lib
    default-language: Haskell2010

executable interpreter
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0, interpreter
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends: 
          base ^>= 4.16.4.0
        , tasty >= 0.7
        , tasty-hunit >= 0.10
        , interpreter
    hs-source-dirs: tests
    default-language: Haskell2010
